fix(floatinglabel): allow usage of k-invalid and k-focus classes

--- a/packages/default/scss/floating-label/_theme.scss
+++ b/packages/default/scss/floating-label/_theme.scss
@@ -10,6 +10,7 @@
             );
         }
 
+        &.k-focus > .k-label,
         &.k-state-focused > .k-label {
             @include fill(
                 $color: $floating-label-focus-text,
