--- a/packages/bootstrap/scss/index.scss
+++ b/packages/bootstrap/scss/index.scss
@@ -42,6 +42,7 @@
 
 // Native forms
 @import "button/_index.scss";
+@import "split-button/_index.scss";
 @import "input/_index.scss";
 @import "textbox/_index.scss";
 @import "textarea/_index.scss";
