--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -210,34 +210,6 @@
     }
 
 
-    // Split button
-    .k-split-button {
-
-        .k-split-button-arrow {
-            padding: $kendo-button-arrow-padding-y $kendo-button-arrow-padding-x;
-            width: auto;
-            aspect-ratio: auto;
-            flex: none;
-
-            &.k-button-sm {
-                padding: $kendo-button-arrow-padding-y-sm $kendo-button-arrow-padding-x-sm;
-            }
-
-            &.k-button-md {
-                padding: $kendo-button-arrow-padding-y-md $kendo-button-arrow-padding-x-md;
-            }
-
-            &.k-button-lg {
-                padding: $kendo-button-arrow-padding-y-lg $kendo-button-arrow-padding-x-lg;
-            }
-
-            .k-button-icon {
-                min-width: 0;
-            }
-        }
-    }
-
-
     // Flat button
     .k-button-flat {
         border-color: transparent !important; // sass-lint:disable-line no-important
@@ -296,8 +268,7 @@
 
 
     // IE
-    .k-ie .k-button-group,
-    .k-ie .k-split-button {
+    .k-ie .k-button-group {
         .k-button {
             @include border-radius( 0 );
         }
