--- a/packages/default/scss/split-button/_index.scss
+++ b/packages/default/scss/split-button/_index.scss
@@ -2,9 +2,9 @@
 
 
 // Dependencies
-@import "../badge/_index.scss";
-@import "../icons/_index.scss";
-@import "../typography/_variables.scss";
+@import "../button/_index.scss";
+@import "../menu/_index.scss";
+
 
 // Component
 @import "_variables.scss";
