--- a/packages/default/scss/index.scss
+++ b/packages/default/scss/index.scss
@@ -43,6 +43,7 @@
 // Native forms
 @import "button/_index.scss";
 @import "split-button/_index.scss";
+@import "menu-button/_index.scss";
 @import "input/_index.scss";
 @import "textbox/_index.scss";
 @import "textarea/_index.scss";
