--- a/packages/classic/scss/chip/_variables.scss
+++ b/packages/classic/scss/chip/_variables.scss
@@ -60,7 +60,7 @@ $kendo-chip-sizes: (
 
 /// The base background of the chip.
 /// @group chip
-$kendo-chip-base-bg: $kendo-button-text !default;
+$kendo-chip-base-bg: $base-text !default;
 
 /// Theme colors map for the chip.
 /// @group chip
