fix(menu): apply focus styles to the inner k-link element

--- a/packages/default/scss/menu/_theme.scss
+++ b/packages/default/scss/menu/_theme.scss
@@ -82,9 +82,9 @@
             }
         }
 
-        .k-item {
-            &:focus,
-            &.k-focus {
+        .k-item:focus,
+        .k-item.k-focus {
+            > .k-link {
                 @include box-shadow( $kendo-menu-popup-item-focus-shadow );
             }
         }
