fix(input): add inline-start border to input button in default and material

--- a/packages/default/scss/input/_theme.scss
+++ b/packages/default/scss/input/_theme.scss
@@ -160,6 +160,15 @@
             border-color: inherit;
         }
 
+        & > .k-input-spinner {
+            border-color: inherit;
+
+            & > .k-spinner-increase,
+            & > .k-spinner-decrease {
+                border-color: inherit;
+           }
+        }
+
         &:hover,
         &.k-hover {
             @include fill (
