fix(input): apply correct hover border-color to input in default theme

--- a/packages/material/scss/input/_variables.scss
+++ b/packages/material/scss/input/_variables.scss
@@ -81,6 +81,10 @@ $kendo-input-outline-bg: null !default;
 $kendo-input-outline-text: null !default;
 $kendo-input-outline-border: null !default;
 
+$kendo-input-outline-hover-bg: null !default;
+$kendo-input-outline-hover-text: null !default;
+$kendo-input-outline-hover-border: null !default;
+
 $kendo-input-flat-bg: transparent !default;
 $kendo-input-flat-text: null !default;
 $kendo-input-flat-border: null !default;
