--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -81,6 +81,10 @@ $kendo-input-outline-bg: null !default;
 $kendo-input-outline-text: null !default;
 $kendo-input-outline-border: rgba( $kendo-button-text, .5) !default;
 
+$kendo-input-outline-hover-bg: null !default;
+$kendo-input-outline-hover-text: null !default;
+$kendo-input-outline-hover-border: rgba( $kendo-button-text, .8) !default;
+
 $kendo-input-flat-bg: transparent !default;
 $kendo-input-flat-text: $kendo-input-text !default;
 $kendo-input-flat-border: $kendo-input-border !default;
