fix(scheduler): align recurrence icon in bootstrap theme

--- a/packages/bootstrap/scss/scheduler/_layout.scss
+++ b/packages/bootstrap/scss/scheduler/_layout.scss
@@ -25,6 +25,9 @@
         .k-event-actions {
             right: $padding-x-sm;
             font-size: $font-size-sm;
+            &:first-child {
+                margin: .1ex .4ex 0 $padding-x-sm;
+            }
         }
     }
 
