--- a/packages/material/scss/gantt/_variables.scss
+++ b/packages/material/scss/gantt/_variables.scss
@@ -87,6 +87,7 @@ $gantt-action-on-offset-text: #000000 !default;
 $gantt-offset-resize-handler-top: 50% !default;
 
 $gantt-validation-tooltip-width: 200px !default;
+$gantt-validation-tooltip-label-width: 50px !default;
 $gantt-validation-tooltip-border: #656565 !default;
 $gantt-validation-tooltip-valid-border: $success !default;
 $gantt-validation-tooltip-invalid-border: $error !default;
