--- a/packages/classic/scss/panelbar/_variables.scss
+++ b/packages/classic/scss/panelbar/_variables.scss
@@ -5,6 +5,8 @@ $panelbar-font-family: $font-family !default;
 $panelbar-font-size: $font-size !default;
 $panelbar-line-height: $line-height !default;
 $panelbar-border-width: 1px !default;
+$panelbar-item-border-width: 1px !default;
+$panelbar-item-border-style: solid !default;
 
 $panelbar-header-padding-x: $nav-item-padding-x !default;
 $panelbar-header-padding-y: $nav-item-padding-y !default;
