fix: add missing styles to numeric-filter-menu

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1243,6 +1243,7 @@
         kendo-numeric-filter-menu,
         kendo-grid-string-filter-menu,
         kendo-grid-date-filter-menu,
+        kendo-grid-numeric-filter-menu,
         kendo-grid-filter-menu-input-wrapper {
             display: flex;
             flex-flow: column nowrap;
